MDEV-5728: BINLOG_GTID_POS(..) does not return proper error unless mysql_store_result is called

Add a check for binlog open already during the parsing, so that
BINLOG_GTID_POS() can return the error early and not delay it
until execution.